ingress-controller/maven-web-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: maven-web-app
   namespace: prod
spec:
   strategy:
      type: RollingUpdate
      rollingUpdate:
         maxUnavailable: 1
         maxSurge: 1
   minReadySeconds: 30
   selector:
      matchLabels:
         app: mavenwebapp
   replicas: 2
   template:
      metadata:
         name: maven-web-app-pod
         labels:
            app: mavenwebapp
      spec:
         containers:
         - name: mavenwebappcontainer
           image: uday745/maven-web-application:1.1
           ports:
           - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: mavenwebsvc
  namespace: prod
spec:
  type: ClusterIP
  selector:
     app: mavenwebapp
  ports:
  - port: 80
    targetPort: 8080
