ingress-controller/sprin-app-ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
   name: ingress-resource-2
   namespace: prod
spec:
   ingressClassName: nginx
   rules:
   - host: springapp.uudhhay.co.in
     http:
       paths:
       - pathType: Prefix
         path: "/"
         backend:
           service:
              name: springappsvc
              port: 
                number: 80
